# PythonProject_Bank_ver1

./: .flake8  .gitignore  README.md  index.html  main.py  mylog.txt  pivas.txt  pyproject.toml
coverage/: index.html
data/: operations.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_iuohiuho_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  generators.py  iuohiuho.py  masks.py  masks_ver2.py  pivas.txt  pivo.txt  processing.py  test.py  utils.py  widget.py
tests/: conftest.py  descrip.py  mylog.txt  pivas.txt  test_decorators.py  test_filter_by_currency.py  test_generators.py  test_masks.py  test_processing.py  test_transaction_descriptions.py  test_utils.py  test_widget.py  tests_main.py
