[project]
name = "pythonproject-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "Андрей Атаманов",email = "rar3065003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
## Максимальная длина строки
line-length = 119
## Файлы, которые не нужно форматировать
exclude ='''(\.git)'''
#(
#  /(
#      \.eggs         # Исключить несколько общих каталогов
#    | \.git          # в корне проекта
#    | \.hg
#    | \.mypy_cache
#    | \.tox
#    | \.venv
#    | dist
#  )/
#  | foo.py           # Также отдельно исключить файл с именем foo.py
#                     # в корне проекта
#)
[tool.isort]
profile = "black"
line_length = 119
force_single_line = true
#known_first_party = ["my_project"]
##sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
#multi_line_output = 3
#include_trailing_comma = true
#force_grid_wrap = 0
#use_parentheses = true